# smolllm

./: CLAUDE.md  CONTEXT.md  Makefile  README.md  providers.json  pyproject.toml
.github/workflows/: release.yml
docs/: DEFERRED.md
docs/adr/: 0001-extreme-minimalism.md  0002-token-only-accounting.md
examples/: embed.py  hello.py  history.py  llm_func.py  simple.py  smolagents_adapter_example.py
src/smolllm/: __init__.py  async_util.py  balancer.py  core.py  display.py  embeddings.py  env.py  http_stream.py  log.py  metrics.py  model_selector.py  provider_config.py  providers.py  request.py  response.py  smolagents_adapter.py  stream.py  types.py  utils.py
tests/: test_client.py  test_embed.py  test_finish_reason.py  test_http_stream.py  test_imports.py  test_model_selector.py  test_model_spec.py  test_options.py  test_request.py  test_response_parse.py  test_stream.py  test_strip_backticks.py  test_think_tags.py  test_usage.py
tools/: bump_version.py  generate_providers.py  update_providers.py
