[project]
name = "smolllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "httpx>=0.28.1",
    "rich>=13.9.4",
]

[project.scripts]
smolllm = "smolllm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

